tests/errors/syn_method34.java
public class syn_method34 {
static int main ( ) {
 
}
}